Added zoom, grid expansion, better arrows, started collapsing

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>dTree</title>
+  <title>Topiary</title>
 </head>
 
 <body>
